# simplechat

./: .gitignore  LICENSE
QtSimpleChatClient/: chatclient.cpp  chatwindow.cpp  chatwindow.h  clientmain.cpp
QtSimpleChatServer/: serverworker.cpp
QtSimpleChatServerThreaded/: CMakeLists.txt  QtSimpleChatServerThreaded.pro  chatserver.cpp  chatserver.h  enums.h  server.cpp  server.h  servermain.cpp  serverworker.cpp  serverworker.h
